<resources>
    <string name="app_name">Rubbish App</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_text">Display This</string>
    <string name="menu_bar_text">Display In The Bar</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <string name="ui">UI</string>

    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="todo">TODO</string>
    <string name="register_here">Register Here</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="new_username">New Username</string>
    <string name="description">Description</string>
    <string name="new_description">New Description</string>
    <string name="score">Score</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Email">Email</string>
    <string name="edit">Edit</string>
    <string name="enter">Enter</string>
    <string name="menu">Menu</string>
    <string name="delete_account">Delete Account</string>
    <string name="if_you_do_not_have_an_account">If you don\'t have an account</string>
    <string name="if_you_already_have_an_account">If you already have an account</string>
    <string name="login_here">Login Here</string>
    <string name="bio">Bio</string>

    <string name="Register">Register</string>
    <string name="Login">Login</string>
    <string name="Profile">Profile</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="Map">Map</string>
    <string name="Settings">Settings</string>
    <string name="Report">Report</string>
    <string name="signature_title" />
    <string name="reply_title" />
    <string name="sync_header" />
    <string name="messages_header" />
    <string name="sync_title" />
    <string name="attachment_summary_off" />
    <string name="attachment_summary_on" />
    <string name="attachment_title" />
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_def_value">1</string>
    <string name="account_details">Account Details</string>
    <string name="contact_support">Contact Support</string>
    <string name="feedback">Feedback</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="communicate">Communicate</string>
    <string name="rate_review">Rate review</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="activity_1">Activity 1</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="subject" >Subject</string>
    <string name="message">Message</string>
    <string name="submit_rating">Submit Rating</string>



</resources>