<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/signature_green"
    tools:context=".RegisterFromLoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.RubbishApp.RegisterMenuBar">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/RegisterFromLogin_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/signature_green_darker" />

    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/imageViewRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_marginTop="73dp"
        android:contentDescription="@string/todo"
        android:gravity="center_vertical"
        tools:srcCompat="@tools:sample/avatars" />

    <EditText
        android:id="@+id/usernameRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewRegister"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/amasis_mt"
        android:hint="@string/username"
        android:padding="20dp"
        android:textColorHint="@color/material_on_surface_emphasis_high_type" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameRegister"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/amasis_mt"
        android:hint="@string/Email"
        android:padding="20dp"
        android:textColorHint="@color/material_on_surface_emphasis_high_type" />

    <EditText
        android:id="@+id/passwordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/password"
        android:padding="20dp"
        android:textColorHint="@color/material_on_surface_emphasis_high_type" />

    <EditText
        android:id="@+id/confirmPasswordRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordRegister"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:hint="@string/confirm_password"
        android:padding="20dp"
        android:textColorHint="@color/material_on_surface_emphasis_high_type" />

    <EditText
        android:id="@+id/bioRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirmPasswordRegister"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:fontFamily="@font/amasis_mt"
        android:hint="Bio"
        android:padding="20dp"
        android:textColorHint="@color/material_on_surface_emphasis_high_type" />

    <Button
        android:id="@+id/enterButtonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/bioRegister"
        android:layout_alignEnd="@id/confirmPasswordRegister"
        android:layout_alignRight="@id/confirmPasswordRegister"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/signature_orange"
        android:fontFamily="@font/amasis_mt_bold"
        android:padding="10dp"
        android:text="@string/enter"
        android:textColor="@color/white" />


</RelativeLayout>